<resources>
    <string name="app_name">Jetpack</string>
    <string name="text_wenzi">测试文字</string>
    <string name="_2">+2</string>
    <string name="_1">+1</string>
    <string name="ateam">A队</string>
    <string name="Bteam">B队</string>
    <string name="count1">1分</string>
    <string name="count2">2分</string>
    <string name="cont3">3分</string>
    <string name="back">重置</string>
    <string name="back_1">返回</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item1">item1</string>
</resources>
